--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,24 @@
-# 核心依赖
-llama-index-core>=0.10.0
-llama-index-embeddings-huggingface>=0.1.0
-llama-index-llms-openai-like>=0.1.0
+# 核心依赖 - LlamaIndex RAG 框架
+llama-index-core==0.14.10
+llama-index-embeddings-huggingface==0.6.1
+
+# LLM依赖（支持OpenAI兼容API如DeepSeek）
+llama-index-llms-openai==0.6.9
+openai==1.54.0
 
 # Web框架
-flask>=3.0.0
-flask-cors>=4.0.0
+Flask==3.1.2
+flask-cors==6.0.1
 
 # 环境变量
-python-dotenv>=1.0.0
+python-dotenv==1.1.1
 
 # 文件处理
-pypdf>=3.17.0
-python-docx>=1.1.0
+pypdf==6.4.1
+python-docx==1.2.0
 
 # 工具库
-werkzeug>=3.0.0
+Werkzeug==3.1.3
 
 # 可选：向量数据库
 # chromadb>=0.4.0
