--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,9 @@ python-docx==1.2.0
 # 工具库
 Werkzeug==3.1.3
 
+# 文件监控（自动化系统）
+watchdog==6.0.0
+
 # 可选：向量数据库
 # chromadb>=0.4.0
 # qdrant-client>=1.7.0
